Only run the main test suite

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,35 +9,35 @@ build:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
       - ./occ maintenance:install --database-name oc_autotest --database-user oc_autotest --admin-user admin --admin-pass admin --database sqlite --database-pass=''
-      - NOCOVERAGE=true ./autotest.sh sqlite
+      - TESTSUITE=main NOCOVERAGE=true ./autotest.sh sqlite
   sqlite-php5.5:
     image: nextcloudci/php5.5:1.0.7
     commands:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
       - ./occ maintenance:install --database-name oc_autotest --database-user oc_autotest --admin-user admin --admin-pass admin --database sqlite --database-pass=''
-      - NOCOVERAGE=true ./autotest.sh sqlite
+      - TESTSUITE=main NOCOVERAGE=true ./autotest.sh sqlite
   sqlite:
     image: nextcloudci/php5.6:1.0.6
     commands:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
       - ./occ maintenance:install --database-name oc_autotest --database-user oc_autotest --admin-user admin --admin-pass admin --database sqlite --database-pass=''
-      - ./autotest.sh sqlite
+      - TESTSUITE=main ./autotest.sh sqlite
   mysql:
     image: nextcloudci/php5.6:1.0.6
     commands:
       - sleep 15 # gives the database enough time to initialize
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
-      - ./autotest.sh mysql
+      - TESTSUITE=main ./autotest.sh mysql
   postgres:
     image: nextcloudci/php5.6:1.0.6
     commands:
       - sleep 10 # gives the database enough time to initialize
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
-      - ./autotest.sh pgsql
+      - TESTSUITE=main ./autotest.sh pgsql
   integration:
     image: nextcloudci/php5.6:1.0.6
     commands:
